--- a/PaintProjectTerm/MainWindow.xaml
+++ b/PaintProjectTerm/MainWindow.xaml
@@ -7,16 +7,23 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <Canvas HorizontalAlignment="Left" Height="414" Margin="305,0,0,0" VerticalAlignment="Center" Width="485"/>
-        <StackPanel HorizontalAlignment="Left" Height="414" Width="295" Margin="10,10,0,10">
+        <Canvas x:Name="paintCanvas" HorizontalAlignment="Left" Height="414" Margin="305,0,0,0" VerticalAlignment="Center" Width="485" MouseMove="Canvas_MouseMove" Background="White" MouseLeftButtonDown="paintCanvas_MouseLeftButtonDown" MouseLeftButtonUp="paintCanvas_MouseLeftButtonUp"/>
+        <GroupBox HorizontalAlignment="Left" Height="69" Header="Кольори" Margin="10,10,0,0" VerticalAlignment="Top" Width="134">
+            <StackPanel HorizontalAlignment="Left" Height="124" VerticalAlignment="Top" Width="124">
+                <RadioButton Content="Червоний" Checked="RadioButton_Checked"/>
+                <RadioButton Content="Синій" Checked="RadioButton_Checked_1"/>
+                <RadioButton Content="Чорний" Checked="RadioButton_Checked_2"/>
+            </StackPanel>
+        </GroupBox>
+        <GroupBox HorizontalAlignment="Left" Height="82" Header="Розмір" Margin="10,96,0,0" VerticalAlignment="Top" Width="134">
+            <StackPanel HorizontalAlignment="Left" Height="61" VerticalAlignment="Top" Width="124">
+                <RadioButton Content="Маленький" Checked="RadioButton_Checked_3"/>
+                <RadioButton Content="Середній" Checked="RadioButton_Checked_4"/>
+                <RadioButton Content="Великий" Checked="RadioButton_Checked_5"/>
+            </StackPanel>
+        </GroupBox>
+        <Button Content="Очистити" HorizontalAlignment="Left" Height="22" Margin="21,210,0,0" VerticalAlignment="Top" Width="103" Click="Button_Click"/>
 
-            <GroupBox  Header="GroupBox" Height="87"/>
-            <RadioButton Content="Red" Checked="RadioButton_Checked" />
-            <RadioButton Content="Blue" />
-            <RadioButton Content="Black" />
-
-
-        </StackPanel>
 
 
 
